--- a/.prow.yaml
+++ b/.prow.yaml
@@ -261,6 +261,7 @@ presubmits:
               cpu: 500m
 
   - name: pull-machine-controller-e2e-azure-redhat-satellite
+    optional: true
     always_run: false
     decorate: true
     error_on_eviction: true
