--- a/test/e2e/provisioning/testdata/machinedeployment-azure-redhat-satellite.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-azure-redhat-satellite.yaml
@@ -51,9 +51,9 @@ spec:
             # 'rhelSubscriptionManagerPassword' is only used for rhel os and can be set via env var `RHEL_SUBSCRIPTION_MANAGER_PASSWORD`
             rhelSubscriptionManagerPassword: "<< RHEL_SUBSCRIPTION_MANAGER_PASSWORD >>"
             rhsmOfflineToken: "<< REDHAT_SUBSCRIPTIONS_OFFLINE_TOKEN >>"
-            rhSatelliteServer: ""
-            useRHSatelliteServer: false
-            organizationName: ""
-            activationKey: ""
+            rhelSatelliteServer: ""
+            rhelUseSatelliteServer: false
+            rhelOrganizationName: ""
+            rhelActivationKey: ""
       versions:
         kubelet: "1.17.0"
