--- a/pkg/userdata/centos/testdata/kubelet-v1.17-vsphere.yaml
+++ b/pkg/userdata/centos/testdata/kubelet-v1.17-vsphere.yaml
@@ -42,7 +42,7 @@ write_files:
     fs.inotify.max_user_watches = 1048576
 
 
-- path: /etc/sysconfig/selinux
+- path: /etc/selinux/config
   content: |
     # This file controls the state of SELinux on the system.
     # SELINUX= can take one of these three values:
@@ -65,9 +65,7 @@ write_files:
     setenforce 0 || true
     systemctl restart systemd-modules-load.service
     sysctl --system
-    cp /etc/fstab /etc/fstab.orig
-    cat /etc/fstab.orig | awk '$3 ~ /^swap$/ && $1 !~ /^#/ {$0="# commented out by cloudinit\n#"$0} 1' > /etc/fstab.noswap
-    mv /etc/fstab.noswap /etc/fstab
+    sed -i.orig '/.*swap.*/d' /etc/fstab
     swapoff -a
 
     hostnamectl set-hostname node1
@@ -75,6 +73,7 @@ write_files:
 
     yum install -y yum-utils
     yum-config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo
+    yum-config-manager --save --setopt=docker-ce-stable.module_hotfixes=true
 
     DOCKER_VERSION='18.09.9-3.el7'
     yum install -y docker-ce-${DOCKER_VERSION} \
@@ -90,7 +89,7 @@ write_files:
       yum-plugin-versionlock \
       open-vm-tools \
       ipvsadm
-    yum versionlock docker-ce-*
+    yum versionlock add docker-ce-*
 
     opt_bin=/opt/bin
     cni_bin_dir=/opt/cni/bin
