--- a/examples/scaleway-machinedeployment.yaml
+++ b/examples/scaleway-machinedeployment.yaml
@@ -9,7 +9,6 @@ type: Opaque
 stringData:
   access_key: << SCW_ACCESS_KEY >>
   secret_key: << SCW_SECRET_KEY >>
-  project_id: << SCW_DEFAULT_PROJECT_ID >>
 ---
 apiVersion: "cluster.k8s.io/v1alpha1"
 kind: MachineDeployment
@@ -51,12 +50,7 @@ spec:
                 namespace: kube-system
                 name: machine-controller-scaleway
                 key: secret_key
-            # If empty, can be set via SCW_DEFAULT_PROJECT_ID env var
-            projectId:
-              secretKeyRef:
-                namespace: kube-system
-                name: machine-controller-scaleway
-                key: project_id
+            projectId: << SCW_DEFAULT_PROJECT_ID >>
             zone: fr-par-1
             commercialType: DEV1-M
             ipv6: false
