--- a/pkg/userdata/coreos/testdata/v1.17.2-disable-auto-update-aws-external.yaml
+++ b/pkg/userdata/coreos/testdata/v1.17.2-disable-auto-update-aws-external.yaml
@@ -8,6 +8,20 @@ passwd:
 
 systemd:
   units:
+    - name: kubelet-restart.service
+      enabled: true
+      contents: |
+        [Unit]
+        Description=Restarts kubelet on use of closed network connection error
+        Requires=kubelet.service
+        After=kubelet.service
+
+        [Service]
+        ExecStart=/opt/kubelet-restart.sh
+
+        [Install]
+        WantedBy=multi-user.target
+
     - name: update-engine.service
       mask: true
     - name: locksmithd.service
@@ -151,6 +165,25 @@ systemd:
 
 storage:
   files:
+    - path: /opt/kubelet-restart.sh
+      filesystem: root
+      mode: 0755
+      contents:
+        inline: |
+          #!/bin/bash
+
+          while true; do
+              output=$(journalctl -u kubelet -n 1 | grep "use of closed network connection")
+              if [[ $? != 0 ]]; then
+                  echo "Error not found in logs"
+              elif [[ $output ]]; then
+                  echo "Restart kubelet"
+                  systemctl restart kubelet
+              fi
+
+              # Runs every 10 minutes
+              sleep 600
+          done
 
     - path: "/etc/systemd/journald.conf.d/max_disk_use.conf"
       filesystem: root
