add gocache and goproxy to CI jobs

--- a/.prow.yaml
+++ b/.prow.yaml
@@ -4,12 +4,15 @@ presubmits:
     always_run: true
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
+    labels:
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
           command:
             - make
           args:
+            - download-gocache
             - all
           resources:
             requests:
@@ -19,6 +22,8 @@ presubmits:
     always_run: true
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
+    labels:
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -34,6 +39,8 @@ presubmits:
     always_run: true
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
+    labels:
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golangci/golangci-lint:v1.23.6
@@ -50,6 +57,8 @@ presubmits:
     always_run: true
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
+    labels:
+      preset-goproxy: "true"
     spec:
       containers:
         - image: quay.io/kubermatic/yamllint:0.1
@@ -61,16 +70,29 @@ presubmits:
             requests:
               cpu: 200m
 
+  - name: pull-machine-controller-verify-boilerplate
+    always_run: true
+    decorate: true
+    clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
+    spec:
+      containers:
+        - image: python:2.7
+          command:
+            - "./hack/verify-boilerplate.sh"
+
   - name: pull-machine-controller-test
     always_run: true
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
+    labels:
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
           command:
             - make
           args:
+            - download-gocache
             - test-unit
           resources:
             requests:
@@ -92,6 +114,7 @@ presubmits:
       preset-vsphere: "true"
       preset-kubevirt: "true"
       preset-alibaba: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -115,6 +138,7 @@ presubmits:
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
       preset-rhel: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -138,6 +162,7 @@ presubmits:
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
       preset-rhel: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -161,6 +186,7 @@ presubmits:
       preset-alibaba: "true"
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -183,6 +209,7 @@ presubmits:
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
       preset-rhel: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -205,6 +232,7 @@ presubmits:
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
       preset-rhel: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -226,9 +254,10 @@ presubmits:
       preset-aws: "true"
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
+      preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.15.3
+        - image: golang:1.15.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -247,6 +276,7 @@ presubmits:
       preset-digitalocean: "true"
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -269,6 +299,7 @@ presubmits:
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
       preset-rhel: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -292,6 +323,7 @@ presubmits:
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
       preset-rhel: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -314,6 +346,7 @@ presubmits:
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
       preset-rhel: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -334,6 +367,7 @@ presubmits:
     labels:
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -357,6 +391,7 @@ presubmits:
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
       preset-linode: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -379,6 +414,7 @@ presubmits:
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
       preset-packet: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -401,6 +437,7 @@ presubmits:
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
       preset-cherryservers: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -423,6 +460,7 @@ presubmits:
       preset-e2e-ssh: "true"
       preset-vsphere: "true"
       preset-rhel: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -444,6 +482,7 @@ presubmits:
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
       preset-anexia: "true"
+      preset-goproxy: "true"
     spec:
       containers:
       - image: golang:1.15.1
@@ -465,6 +504,7 @@ presubmits:
       preset-openstack: "true"
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -485,6 +525,7 @@ presubmits:
     labels:
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -498,16 +539,6 @@ presubmits:
               memory: 1Gi
               cpu: 500m
 
-  - name: pull-machine-controller-verify-boilerplate
-    always_run: true
-    decorate: true
-    clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
-    spec:
-      containers:
-        - image: python:2.7
-          command:
-            - "./hack/verify-boilerplate.sh"
-
   - name: pull-machine-controller-e2e-aws-ebs-encryption-enabled
     always_run: true
     decorate: true
@@ -517,6 +548,7 @@ presubmits:
       preset-aws: "true"
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -538,6 +570,7 @@ presubmits:
       preset-aws: "true"
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -559,6 +592,7 @@ presubmits:
       preset-aws: "true"
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -580,6 +614,7 @@ presubmits:
       preset-aws: "true"
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -602,6 +637,7 @@ presubmits:
       preset-rhel: "true"
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -624,6 +660,7 @@ presubmits:
       preset-rhel: "true"
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -645,6 +682,7 @@ presubmits:
       preset-scaleway: "true"
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: golang:1.15.1
@@ -668,6 +706,7 @@ postsubmits:
       - ^v\d+\.\d+\.\d+.*
     labels:
       preset-docker-push: "true"
+      preset-goproxy: "true"
     spec:
       containers:
         - image: quay.io/kubermatic/go-docker:15.1-1903-0
@@ -679,10 +718,28 @@ postsubmits:
               /usr/local/bin/entrypoint.sh &&
               docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD &&
               docker login -u $QUAY_IO_USERNAME -p $QUAY_IO_PASSWORD quay.io &&
-              make docker-image-publish
+              make download-gocache docker-image-publish
           # docker-in-docker needs privileged mode
           securityContext:
             privileged: true
+          resources:
+            requests:
+              cpu: 100m
+              memory: 1Gi
+
+  - name: ci-push-machine-controller-upload-gocache
+    always_run: true
+    decorate: true
+    clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
+    branches:
+      - ^master$
+    labels:
+      preset-goproxy: "true"
+    spec:
+      containers:
+        - image: quay.io/kubermatic/go-docker:15.1-1903-0
+          command:
+            - "./hack/ci-upload-gocache.sh"
           resources:
             requests:
               cpu: 100m
