increase webhook handler timeout Signed-off-by: Moath Qasim <moad.qassem@gmail.com>
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -503,6 +503,7 @@ metadata:
 webhooks:
 - name: machinedeployments.machine-controller.kubermatic.io
   failurePolicy: Fail
+  timeoutSeconds: 50
   rules:
   - apiGroups:
     - "cluster.k8s.io"
