support image reference in azure
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

--- a/.prow.yaml
+++ b/.prow.yaml
@@ -312,6 +312,29 @@ presubmits:
               memory: 1Gi
               cpu: 500m
 
+  - name: pull-machine-controller-e2e-azure-custom-image-reference
+    always_run: true
+    decorate: true
+    error_on_eviction: true
+    clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
+    labels:
+      preset-azure: "true"
+      preset-hetzner: "true"
+      preset-e2e-ssh: "true"
+      preset-rhel: "true"
+      preset-goproxy: "true"
+    spec:
+      containers:
+        - image: golang:1.15.1
+          command:
+            - "./hack/ci-e2e-test.sh"
+          args:
+            - "TestAzureCustomImageReferenceProvisioningE2E"
+          resources:
+            requests:
+              memory: 1Gi
+              cpu: 500m
+
   - name: pull-machine-controller-e2e-azure-redhat-satellite
     optional: true
     always_run: false
